--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,17 @@
 platform = espressif8266
 framework = arduino
 board = esp12e
-targets = upload
+
+
+lib_deps =
+            ArduinoJson
+            Time
+            Ticker
+            Timezone
+            OneWire
+            DallasTemperature
+
+
+
 upload_port = 192.168.1.50
 #upload_port = COM3
