--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ platform = espressif8266
 framework = arduino
 board = esp12e
 
+extra_scripts = tools/LittleFS/LittleFSBuilder.py
 
 lib_deps =
             ArduinoJson
@@ -30,8 +31,6 @@ lib_deps =
             Timezone
             OneWire
             DallasTemperature
-
-
 
 upload_port = 192.168.1.50
 #upload_port = COM3
