wifi connect fix

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ platform = espressif8266
 framework = arduino
 board = esp12e
 
-extra_scripts = tools/LittleFS/LittleFSBuilder.py
+extra_scripts = ../_common/tools/LittleFS/LittleFSBuilder.py
 
 lib_deps =
             ArduinoJson
@@ -32,5 +32,6 @@ lib_deps =
             OneWire
             DallasTemperature
 
-upload_port = 192.168.1.50
-#upload_port = COM3
+upload_protocol = espota
+upload_port = 192.168.1.56
+;upload_port = COM3
