--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,7 @@ extra_scripts = ../_common/tools/LittleFS/LittleFSBuilder.py
 
 lib_deps =
             ArduinoJson
+            PubSubClient
             Time
             Ticker
             Timezone
@@ -34,4 +35,5 @@ lib_deps =
 
 upload_protocol = espota
 upload_port = 192.168.1.50
+;upload_port = 192.168.1.105
 ;upload_port = COM3
