--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@
 platform = espressif8266
 framework = arduino
 board = esp12e
+monitor_speed = 115200
 
 extra_scripts = ../_common/tools/LittleFS/LittleFSBuilder.py
 
@@ -34,6 +35,6 @@ lib_deps =
             DallasTemperature
 
 upload_protocol = espota
-upload_port = 192.168.1.50
-;upload_port = 192.168.1.105
+;upload_port = 192.168.1.50
+upload_port = 192.168.1.105
 ;upload_port = COM3
