--- a/platformio.ini
+++ b/platformio.ini
@@ -1,29 +1,10 @@
-#
-# Project Configuration File
-#
-# A detailed documentation with the EXAMPLES is located here:
-# http://docs.platformio.org/en/latest/projectconf.html
-#
-
-# A sign `#` at the beginning of the line indicates a comment
-# Comment lines are ignored.
-
-# Simple and base environment
-# [env:mybaseenv]
-# platform = %INSTALLED_PLATFORM_NAME_HERE%
-# framework =
-# board =
-#
-# Automatic targets - enable auto-uploading
-# targets = upload
-
 [env:esp12e]
 platform = espressif8266
 framework = arduino
 board = esp12e
 monitor_speed = 115200
 
-extra_scripts = ../_common/tools/LittleFS/LittleFSBuilder.py
+board_build.filesystem = littlefs
 
 lib_deps =
             ArduinoJson
@@ -35,6 +16,5 @@ lib_deps =
             DallasTemperature
 
 upload_protocol = espota
-upload_port = 192.168.1.56
-;upload_port = 192.168.1.105
+upload_port = 192.168.1.55
 ;upload_port = COM3
