--- a/platformio.ini
+++ b/platformio.ini
@@ -6,15 +6,22 @@ monitor_speed = 115200
 
 board_build.filesystem = littlefs
 
+extra_scripts = 
+    pre:../_common/tools/versioning/preIncrementBuildNumber.py
+major_build_number = v1.0.
+
 lib_deps =
-            ArduinoJson
-            PubSubClient
-            Time
-            Ticker
-            Timezone
-            OneWire
-            DallasTemperature
+    bblanchon/ArduinoJson
+    knolleary/PubSubClient
+    paulstoffregen/Time
+    sstaub/Ticker
+    jchristensen/Timezone
+    paulstoffregen/OneWire
+    milesburton/DallasTemperature
+
+lib_extra_dirs =
+    D:\Projects\Libraries\TimeChangeRules
 
 upload_protocol = espota
-upload_port = 192.168.1.55
+upload_port = 192.168.1.56
 ;upload_port = COM3
