--- a/platformio.ini
+++ b/platformio.ini
@@ -22,8 +22,8 @@ lib_deps =
 lib_extra_dirs =
     D:\Projects\Libraries\TimeChangeRules
 
-; upload_protocol = espota
-; upload_port = 192.168.1.146
+upload_protocol = espota
+upload_port = 192.168.1.102
 
-upload_port = COM9
-upload_speed = 921600
+; upload_port = COM9
+; upload_speed = 921600
