--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 .vscode/**
 buildserialnumber
 src/version.h
+buildserialnumber
+buildserialnumber
+include/version.h
+buildserialnumber
+include/version.h
