--- a/platformio.ini
+++ b/platformio.ini
@@ -7,8 +7,9 @@ monitor_speed = 921600
 board_build.filesystem = littlefs
 
 extra_scripts = 
-    pre:../_common/tools/versioning/preIncrementBuildNumber.py
-major_build_number = v1.0.
+            pre:../../_scripts/preIncrementBuildNumber.py
+
+major_build_number = v1.1.
 
 lib_deps =
     bblanchon/ArduinoJson
@@ -18,12 +19,13 @@ lib_deps =
     jchristensen/Timezone
     paulstoffregen/OneWire
     milesburton/DallasTemperature
+    lennarthennigs/Button2
 
 lib_extra_dirs =
     D:\Projects\Libraries\TimeChangeRules
 
 ; upload_protocol = espota
-; upload_port = 192.168.1.108
+; upload_port = 192.168.1.113
 
 upload_port = COM9
 upload_speed = 921600
