--- a/platformio.ini
+++ b/platformio.ini
@@ -20,12 +20,13 @@ lib_deps =
     paulstoffregen/OneWire
     milesburton/DallasTemperature
     lennarthennigs/Button2
+    https://github.com/arduino-libraries/NTPClient
 
 lib_extra_dirs =
     D:\Projects\Libraries\TimeChangeRules
 
-; upload_protocol = espota
-; upload_port = 192.168.1.113
+upload_protocol = espota
+upload_port = 192.168.1.105
 
-upload_port = COM9
-upload_speed = 921600
+; upload_port = COM9
+; upload_speed = 921600
