--- a/platformio.ini
+++ b/platformio.ini
@@ -1,32 +1,74 @@
+##################################################
+#   ENVIRONMENT
+##################################################
 [env:esp12e]
 platform = espressif8266
 framework = arduino
 board = esp12e
-monitor_speed = 921600
+
+##################################################
+#   PRE-BUILD
+##################################################
+extra_scripts = 
+            pre:../../scripts/preIncrementBuildNumber.py
+
+custom_major_build_number = v1.2.
+
+##################################################
+#   BUILD
+##################################################
+
+build_type = release
 
 board_build.filesystem = littlefs
 
-extra_scripts = 
-            pre:../../_scripts/preIncrementBuildNumber.py
-
-major_build_number = v1.1.
-
 lib_deps =
-    bblanchon/ArduinoJson
-    knolleary/PubSubClient
-    paulstoffregen/Time
-    sstaub/Ticker
-    jchristensen/Timezone
-    paulstoffregen/OneWire
-    milesburton/DallasTemperature
-    lennarthennigs/Button2
+    bblanchon/ArduinoJson @ ^6.19.3
+    knolleary/PubSubClient @ ^2.8
+    paulstoffregen/Time @ ^1.6.1
+    sstaub/Ticker @ ^4.4.0
+    jchristensen/Timezone @ ^1.2.4
+    paulstoffregen/OneWire @ ^2.3.6
+    milesburton/DallasTemperature @ ^3.9.1
+    lennarthennigs/Button2 @ ^1.6.5
     https://github.com/arduino-libraries/NTPClient
 
 lib_extra_dirs =
     D:\Projects\Libraries\TimeChangeRules
 
-upload_protocol = espota
-upload_port = 192.168.1.105
+build_flags = 
+    '-DSETTINGS_NAME = "halltemp"'    ;  15 chars max!!!
+    '-DDEFAULT_APP_FRIENDLY_NAME = "Hall and Temperature Sensor"'
 
-; upload_port = COM9
+    '-DELEGANTOTA_USE_ASYNC_WEBSERVER = 1'
+    '-DMQTT_CUSTOMER = "viktak"'
+    '-DMQTT_PROJECT = "office"'
+    '-D__localNTP = 0'
+    '-D__debugSettings = 1'
+
+##################################################
+#   UPLOAD
+##################################################
+
+; upload_protocol = esptool
+; upload_port = COM5
 ; upload_speed = 921600
+
+upload_protocol = espota
+upload_port = 192.168.123.147
+
+
+; upload_protocol = custom
+; custom_upload_url = http://192.168.123.107
+; custom_username = admin 
+; custom_password = admin
+
+##################################################
+#   MONITOR
+##################################################
+monitor_port = COM5
+monitor_speed = 115200
+monitor_filters =
+    colorize
+    esp8266_exception_decoder
+
